    * ADD: WebUI is capable of saving changed settings file (be careful changing settings, not all of them have been tested enough)
    * ADD: WebUI settings - default values are presented in green color, changed from defaults are red, description of settings, save info on bottom of page
    * ADD: WebUI is available without password on 127.0.0.1:88 and with root password authentication and user: openlgtv on 0.0.0.0:80 (accepting authenticated connections on LAN/WLAN)
    * ADD: making copy of boot log /var/log/OpenLGTV_BCM.log to USB storage device in OpenLGTV_BCM dir if it does not exist there - usally it should be first boot log
    * ADD: making default settings file /mnt/user/cfg/settings.default with comments
    * ADD: WebUI - full browser option [work in progress] by nicola_12345
    * ADD: WebUI menu in horizontal view, so it can have more items without using limited vertical space
    * ADD: WebUI available on US TV models (althrough only remotely, not in TV itself - these models lack of built-in web browser)
    * ADD: WebUI has now execute command and change passwords options (change password changes password to telnet, SSH and WebUI - all in one)
    * UPDATE: haserl binary updated to version 0.9.28, compiled without LUA and BashExtensions support
    * CHANGE: update install.sh and create_img.sh scripts to support autoupgrade
    * CHANGE: use better names for backups with information which is rootfs and which lginit backups before autoupgrade/install
    * CHANGE: move backup, flashed file and logs to 'flashed' subdir after successful flash
    * CHANGE: shorten USB storage check time to minimal with info how much time has it took
    * WARN: from now on, install.sh makes installation automaticaly and reboots TV after successful flash, without confirmation
    * WARN: from this release there's already default password set for telnet, SSH and web server - "openlgtv"